--- a/index.html
+++ b/index.html
@@ -1,74 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>The Team | Jain_Edits108</title>
-  <link rel="stylesheet" href="style.css" />
-  <style>
-    /* Add the same styles for the navbar here as in your main page */
-    nav {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      background-color: #171717;
-      padding: 5px 0;
-      z-index: 1000;
-      text-align: center;
-    }
-
-    nav ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: space-between;
-    }
-
-    nav ul li a {
-      text-decoration: none;
-      color: white;
-      font-size: 18px;
-      padding: 8px 16px;
-      display: inline-block;
-      transition: background-color 0.3s;
-    }
-
-    nav ul li a:hover {
-      background-color: #575757;
-    }
-
-    /* Add other team page styles here */
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Team - Jain Edits</title>
+    <link rel="stylesheet" href="style.css"> <!-- Link to your CSS -->
 </head>
 <body>
 
-  <!-- Navigation Bar -->
-  <nav>
-    <ul class="nav-left">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="team.html">The Team</a></li>
-    </ul>
-    <ul class="nav-right">
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="stories.html">Stories</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+    <!-- Navigation bar -->
+    <nav>
+        <ul class="nav-left">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="team.html">The Team</a></li>
+        </ul>
+        <ul class="nav-right">
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="stories.html">Stories</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
 
-  <!-- Team Page Content -->
-  <div class="overlay">
-    <h1>Meet the Wonderful Team That Helps Me With Content</h1>
+    <section class="team-container">
+        <h1>Meet the Wonderful Team That Helps Me with Content</h1>
 
-    <div class="section">
-      <div class="section-title">Section 1: The Accounts & Mentors That Helped Me Grow</div>
-      <!-- Content from previous message (sections for accounts, friends, collaborations, etc.) goes here -->
-    </div>
+        <div class="section">
+            <h2>The Accounts & Mentors That Helped Me Grow</h2>
+            <ul>
+                <li><strong>jainism.__feelings</strong> - One of the first accounts I collaborated with, always supporting me. Their belief in this page helped Jain_Edits108 grow since its early days.</li>
+                <li><strong>mara_wala_nem_, jain_media_today, jainism_feelings, girnarinem</strong> - Always open to collaborations, always encouraging. Their support helped this page gain reach and grow.</li>
+                <li><strong>dada_ke_bhakth</strong> - Always open to collaborations and advises on content decisions, reach, and strategy. Their input has been invaluable.</li>
+                <li><strong>Jainims_facts, unity.of.jainism</strong> - They run great accounts and always advise me on new ways to grow, whether to post something or not, and how to refine content.</li>
+            </ul>
+        </div>
 
-    <!-- Other sections as per your content -->
+        <div class="section">
+            <h2>Close Friends Who’ve Been There Every Step of the Way</h2>
+            <ul>
+                <li><strong>Aditya Jain</strong> - The Spark Behind Reels. Aditya and I were DMing when I sent him a video I made, he told me I should post it on an account. That was the beginning of Jain_edits108. Without him, this journey wouldn’t have started!</li>
+                <li><strong>Ayush Jain</strong> - One of the first people I met on this journey, and now a close friend. We talk about everything—content, life, and more. His support has been priceless.</li>
+                <li><strong>Desai</strong> - His photography focuses on the authenticity of the moment. He has an incredible ability to capture real emotions and make each shot feel personal and relatable.</li>
+                <li><strong>Meet Jain</strong> - His photography has an artistic flair, turning every shot into a piece of visual storytelling. His unique perspective and creative approach elevate my content.</li>
+                <li><strong>Jay Jain</strong> - A Close Friend & Collaborator. A good friend who not only helps with content but also collaborates and brings in fresh ideas.</li>
+                <li><strong>Vivek Shah</strong> - A huge supporter helping with ideas and content reach. A friend who has my back and helps whenever needed.</li>
+                <li><strong>Amar Salgia</strong> - Provides high-quality research, helping with fact-checking, ideas, and content refinement.</li>
+            </ul>
+        </div>
 
-  </div>
+        <div class="section">
+            <h2>Collaborations That Made a Difference</h2>
+            <ul>
+                <li><strong>spiritual_account</strong></li>
+                <li><strong>annanthdharma</strong></li>
+                <li><strong>jin_ki_vaani</strong></li>
+                <li><strong>prosperous_jainism</strong></li>
+                <li><strong>jainismrevives</strong></li>
+                <li><strong>jain_community</strong></li>
+                <li><strong>jain_reelsjain_song96</strong></li>
+                <li><strong>aadi_nemi__premi</strong></li>
+                <li><strong>shamlay_neminath</strong></li>
+                <li><strong>jain_lyf</strong></li>
+                <li><strong>nemi_na_girnar</strong></li>
+                <li><strong>kattar_jain</strong></li>
+                <li><strong>yojna_foundation_gujarat</strong></li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Unexpected Supporters (Followers Turned Friends)</h2>
+            <ul>
+                <li><strong>Samyak, Soumy, Rubin & Hiral Jain</strong> - Started as followers, but through DMs, became part of the team—helping with content, brainstorming ideas, and supporting the journey.</li>
+            </ul>
+        </div>
+    </section>
+
 </body>
 </html>
