--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Team - Jain Edits</title>
-    <link rel="stylesheet" href="style.css"> <!-- Link to your CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -22,56 +22,79 @@
         </ul>
     </nav>
 
-    <section class="team-container">
-        <h1>Meet the Wonderful Team That Helps Me with Content</h1>
+    <!-- Hero Section -->
+    <section class="hero">
+        <h1>Meet the Team Behind Jain_Edits108</h1>
+        <p class="intro">This journey didn’t happen alone. Along the way, there were people and accounts that supported Jain_edits108 — through collaborations, constant encouragement, and helpful advice. Some became mentors, some collaborators, and some simply believed in the vision. Each one played an important role in getting us here.</p>
+    </section>
 
-        <div class="section">
-            <h2>The Accounts & Mentors That Helped Me Grow</h2>
-            <ul>
-                <li><strong>jainism.__feelings</strong> - One of the first accounts I collaborated with, always supporting me. Their belief in this page helped Jain_Edits108 grow since its early days.</li>
-                <li><strong>mara_wala_nem_, jain_media_today, jainism_feelings, girnarinem</strong> - Always open to collaborations, always encouraging. Their support helped this page gain reach and grow.</li>
-                <li><strong>dada_ke_bhakth</strong> - Always open to collaborations and advises on content decisions, reach, and strategy. Their input has been invaluable.</li>
-                <li><strong>Jainims_facts, unity.of.jainism</strong> - They run great accounts and always advise me on new ways to grow, whether to post something or not, and how to refine content.</li>
-            </ul>
+    <section class="accounts-mentors">
+        <h2>The Accounts & Mentors That Helped Me Grow</h2>
+        <p class="section-intro">Behind every post and milestone, there were Jain Instagram accounts and mentors who offered support, advice, and collaborations. Their constant encouragement helped Jain_edits108 grow — not just in numbers, but in direction and purpose.</p>
+        <div class="person">
+            <h3 class="name">jainism.__feelings</h3>
+            <p class="description">One of the first accounts I collaborated with, always supporting me. Their belief in this page helped Jain_Edits108 grow since its early days.</p>
         </div>
-
-        <div class="section">
-            <h2>Close Friends Who’ve Been There Every Step of the Way</h2>
-            <ul>
-                <li><strong>Aditya Jain</strong> - The Spark Behind Reels. Aditya and I were DMing when I sent him a video I made, he told me I should post it on an account. That was the beginning of Jain_edits108. Without him, this journey wouldn’t have started!</li>
-                <li><strong>Ayush Jain</strong> - One of the first people I met on this journey, and now a close friend. We talk about everything—content, life, and more. His support has been priceless.</li>
-                <li><strong>Desai</strong> - His photography focuses on the authenticity of the moment. He has an incredible ability to capture real emotions and make each shot feel personal and relatable.</li>
-                <li><strong>Meet Jain</strong> - His photography has an artistic flair, turning every shot into a piece of visual storytelling. His unique perspective and creative approach elevate my content.</li>
-                <li><strong>Jay Jain</strong> - A Close Friend & Collaborator. A good friend who not only helps with content but also collaborates and brings in fresh ideas.</li>
-                <li><strong>Vivek Shah</strong> - A huge supporter helping with ideas and content reach. A friend who has my back and helps whenever needed.</li>
-                <li><strong>Amar Salgia</strong> - Provides high-quality research, helping with fact-checking, ideas, and content refinement.</li>
-            </ul>
+        <div class="person">
+            <h3 class="name">mara_wala_nem_, jain_media_today, jainism_feelings, girnarinem</h3>
+            <p class="description">Always open to collaborations, always encouraging. Their support helped this page gain reach and grow.</p>
         </div>
-
-        <div class="section">
-            <h2>Collaborations That Made a Difference</h2>
-            <ul>
-                <li><strong>spiritual_account</strong></li>
-                <li><strong>annanthdharma</strong></li>
-                <li><strong>jin_ki_vaani</strong></li>
-                <li><strong>prosperous_jainism</strong></li>
-                <li><strong>jainismrevives</strong></li>
-                <li><strong>jain_community</strong></li>
-                <li><strong>jain_reelsjain_song96</strong></li>
-                <li><strong>aadi_nemi__premi</strong></li>
-                <li><strong>shamlay_neminath</strong></li>
-                <li><strong>jain_lyf</strong></li>
-                <li><strong>nemi_na_girnar</strong></li>
-                <li><strong>kattar_jain</strong></li>
-                <li><strong>yojna_foundation_gujarat</strong></li>
-            </ul>
+        <div class="person">
+            <h3 class="name">dada_ke_bhakth</h3>
+            <p class="description">Always open to collaborations and advises on content decisions, reach, and strategy. Their input has been invaluable.</p>
         </div>
+        <div class="person">
+            <h3 class="name">jainims_facts, unity.of.jainism</h3>
+            <p class="description">They run great accounts and always advise me on new ways to grow, whether to post something or not, and how to refine content.</p>
+        </div>
+    </section>
 
-        <div class="section">
-            <h2>Unexpected Supporters (Followers Turned Friends)</h2>
-            <ul>
-                <li><strong>Samyak, Soumy, Rubin & Hiral Jain</strong> - Started as followers, but through DMs, became part of the team—helping with content, brainstorming ideas, and supporting the journey.</li>
-            </ul>
+    <section class="close-friends">
+        <h2>Close Friends Who’ve Been There Every Step of the Way</h2>
+        <p class="section-intro">These are the friends who’ve been part of the journey from the very beginning. Whether it was ideating, brainstorming, or just being there as emotional support — they made this journey feel personal and meaningful.</p>
+        <div class="person">
+            <h3 class="name">Aditya Jain</h3>
+            <p class="description">The Spark Behind Reels. Aditya and I were DMing when I sent him a video I made, and he told me I should post it on an account. That was the start of Jain_edits108. Without him, this journey wouldn’t have started!</p>
+        </div>
+        <div class="person">
+            <h3 class="name">Ayush Jain</h3>
+            <p class="description">One of the first people I met on this journey, and now a close friend. We talk about everything—content, life, and more. His support has been priceless.</p>
+        </div>
+        <div class="person">
+            <h3 class="name">Jeet Desai</h3>
+            <p class="description">His photography has an artistic flair, turning every shot into a piece of visual storytelling. His unique perspective and creative approach elevate my content.</p>
+        </div>
+        <div class="person">
+            <h3 class="name">Meet Jain</h3>
+            <p class="description">His photography focuses on the authenticity of the moment. He has an incredible ability to capture real emotions and make each shot feel personal and relatable.</p>
+        </div>
+        <div class="person">
+            <h3 class="name">Jay Jain</h3>
+            <p class="description">A Close Friend & Collaborator. A good friend who not only helps with content but also collaborates and brings in fresh ideas.</p>
+        </div>
+        <div class="person">
+            <h3 class="name">Vivek Shah</h3>
+            <p class="description">A huge supporter helping with ideas and content reach. A friend who has my back and helps whenever needed.</p>
+        </div>
+        <div class="person">
+            <h3 class="name">Amar Salgia</h3>
+            <p class="description">Provides high-quality research, helping with fact-checking, ideas, and content refinement.</p>
+        </div>
+    </section>
+
+    <section class="collaborations">
+        <h2>Collaborations That Made a Difference</h2>
+        <p class="section-intro">Every collaboration added something unique to this page. From sharing content to exchanging ideas, these accounts helped broaden the reach and deepen the impact. Collaborations weren't just about growing the page — they were about growing the community.</p>
+        <div class="person">
+            <h3 class="name">spiritual_account, annanthdharma, jin_ki_vaani, prosperous_jainism, jainismrevives, jain_community, jain_reels, jain_song96, aadi_nemi__premi, shamlay_neminath, jain_lyf, nemi_na_girnar, kattar_jain, yojna_foundation_gujarat</h3>
+        </div>
+    </section>
+
+    <section class="supporters">
+        <h2>Supporters Met Along the Way</h2>
+        <p class="section-intro">Some people began as followers but quickly became part of the inner circle. Through DMs, discussions, and shared passion, they turned into real supporters who now help shape the content and direction of this page.</p>
+        <div class="person">
+            <h3 class="name">Samyak, Soumy, Rubin & Hiral Jain</h3>
         </div>
     </section>
 
