--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Team - Jain Edits</title>
+    <title>The Team - Echoes of Jainism</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,7 +24,7 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <h1>Meet the Team Behind Jain_Edits108</h1>
+        <h1>Meet the Team Behind jain_edits108</h1>
         <p class="intro">This journey didn’t happen alone. Along the way, there were people and accounts that supported Jain_edits108 — through collaborations, constant encouragement, and helpful advice. Some became mentors, some collaborators, and some simply believed in the vision. Each one played an important role in getting us here.</p>
     </section>
 
@@ -36,7 +36,7 @@
             <p class="description">One of the first accounts I collaborated with, always supporting me. Their belief in this page helped Jain_Edits108 grow since its early days.</p>
         </div>
         <div class="person">
-            <h3 class="name">mara_wala_nem_, jain_media_today, jainism_feelings, girnarinem</h3>
+            <h3 class="name">mara_wala_nem_, jain_media_today, jainism_feelings, girnarinem, jainatva_sarvopari</h3>
             <p class="description">Always open to collaborations, always encouraging. Their support helped this page gain reach and grow.</p>
         </div>
         <div class="person">
@@ -86,7 +86,7 @@
         <h2>Collaborations That Made a Difference</h2>
         <p class="section-intro">Every collaboration added something unique to this page. From sharing content to exchanging ideas, these accounts helped broaden the reach and deepen the impact. Collaborations weren't just about growing the page — they were about growing the community.</p>
         <div class="person">
-            <h3 class="name">spiritual_account, annanthdharma, jin_ki_vaani, prosperous_jainism, jainismrevives, jain_community, jain_reels, jain_song96, aadi_nemi__premi, shamlay_neminath, jain_lyf, nemi_na_girnar, kattar_jain, yojna_foundation_gujarat</h3>
+            <h3 class="name">spiritual_account, annanthdharma, jin_ki_vaani, prosperous_jainism, jainismrevives, jain_community, jain_reels, jain_song96, aadi_nemi__premi, shamlay_neminath, jain_lyf, nemi_na_girnar, kattar_jain, yojna_foundation_gujarat, killer_ankit_op</h3>
         </div>
     </section>
 
